Fixed html.index code and css not applying style to index.html

--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 <body>
     <main class="resume-contents">
         <section class="left-section">
-            <section class="left-section-content">
+            <div class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="profile image">
                     <p class="name">Daniel Santos</p>
                     <p class="profession">Software Engineer</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
-                        <li><i class="fa fa-envelope"></i>daniel@gmail.com</li>
-                        <li><i class="fa fa-globe"></i>www.daniel.com</li>
-                        <li><i class="fa fa-github"></i>DanielDev</li>
+                        <li><i class="fa fa-phone"></i>+55 11 99999-1111
+                        </li>
+                        <li><i class="fa fa-envelope"></i>daniel@gmail.com
+                        </li>
+                        <li><i class="fa fa-globe"></i>www.daniel.com
+                        </li>
+                        <li><i class="fa fa-github"></i>DanielDev
+                        </li>
                     </ul>
                 </div>
                 <div class="skills">
@@ -34,7 +38,7 @@
                         <li><p>Krita, Paint.net</p></li>
                     </ul>
                 </div>
-            </section>
+            </div>
         </section>
             <section class="right-section">
                 <div class="right-section-contents">
