--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 <body>
     <main class="resume-contents">
         <section class="left-section">
-            <section class="left-section-content">
+            <div class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
-                    <p class="name">Daniel Santos</p>
-                    <p class="profession">Software Engineer</p>
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="profile image">
+                    <p class="name">John Doe</p>
+                    <p class="profession">Artista 3D</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
-                        <li><i class="fa fa-envelope"></i>daniel@gmail.com</li>
-                        <li><i class="fa fa-globe"></i>www.daniel.com</li>
-                        <li><i class="fa fa-github"></i>DanielDev</li>
+                        <li><i class="fa fa-phone"></i>+44 67 54321-1234
+                        </li>
+                        <li><i class="fa fa-envelope"></i>johndoe@gmail.com
+                        </li>
+                        <li><i class="fa fa-globe"></i>https://en.wikipedia.org/wiki/John_Doe
+                        </li>
+                        <li><i class="fa fa-github"></i>JohnDoeDev
+                        </li>
                     </ul>
                 </div>
                 <div class="skills">
@@ -34,22 +38,58 @@
                         <li><p>Krita, Paint.net</p></li>
                     </ul>
                 </div>
-            </section>
+            </div>
         </section>
             <section class="right-section">
                 <div class="right-section-contents">
                     <section class="about gap">
                         <div class="right-title">Sobre Mim
                             <p class="about me contents">
-                                Olá, sou o Daniel.<br>
+                                Olá, sou o John Doe.<br>
                                 <br>Um pouco mais sobre o que faço
                                 <br> Quais são minhas competências
                             </p>
                         </div>
                     </section>
                 </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <!-- Começo da cópia de nova experiência -->
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                <div class="exp-right">
+                    <p class="exp-position">Engenheiro de Software</p>
+                    <p class="exp-desc">
+                        Descreva aqui as principais atividades
+                    </p>
+                </div>
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 02</p>
+                    <p class="exp-time-period">2000-2020</p>
+                </div>
+            <div class="exp-right">
+                <p class="exp-position">Placeholder2</p>
+                <p class="exp-desc">
+                    AtividadesPlaceholder2
+                </p>
+            </div>
+            <div class="exp-left">
+                <p class="exp-company-name">Empresa 03</p>
+                <p class="exp-time-period">2000-2020</p>
+            </div>
+        <div class="exp-right">
+            <p class="exp-position">Placeholder3</p>
+            <p class="exp-desc">
+                AtividadesPlaceholder3
+            </p>
+        </div>
+        <!-- Término da cópia para nova Experiência -->
+                </div>
             </section>
-        </section>
+            </section>
     </main>
 </body>
 </html>
