Added education to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -34,62 +36,90 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>Blender3d, Maya Software 3D</p></li>
-                        <li><p>Krita, Paint.net</p></li>
+                        <li>
+                            <p>Blender3d, Maya Software 3D</p>
+                        </li>
+                        <li>
+                            <p>Krita, Paint.net</p>
+                        </li>
                     </ul>
                 </div>
             </div>
         </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim
-                            <p class="about me contents">
-                                Olá, sou o John Doe.<br>
-                                <br>Um pouco mais sobre o que faço
-                                <br> Quais são minhas competências
-                            </p>
-                        </div>
-                    </section>
-                </div>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim
+                        <p class="about me contents">
+                            Olá, sou o John Doe.<br>
+                            <br>Um pouco mais sobre o que faço
+                            <br> Quais são minhas competências
+                        </p>
+                    </div>
+                </section>
+            </div>
             <section class="experience gap">
                 <div class="right-title">Experiencia</div>
                 <div class="experience-contents">
-                    <!-- Começo da cópia de nova experiência -->
                     <div class="exp-left">
                         <p class="exp-company-name">Empresa 01</p>
                         <p class="exp-time-period">2021-Present</p>
                     </div>
-                <div class="exp-right">
-                    <p class="exp-position">Engenheiro de Software</p>
-                    <p class="exp-desc">
-                        Descreva aqui as principais atividades
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2000-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Placeholder2</p>
+                        <p class="exp-desc">
+                            AtividadesPlaceholder2
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 03</p>
+                        <p class="exp-time-period">2000-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Placeholder3</p>
+                        <p class="exp-desc">
+                            AtividadesPlaceholder3
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">PUC</p>
+                        <p class="education-time-period">2021-2023</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Engenharia de Software</p>
+                    <p class="education-desc">
+                        Pós Graduação em Engenharia de Software
                     </p>
                 </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 02</p>
-                    <p class="exp-time-period">2000-2020</p>
-                </div>
-            <div class="exp-right">
-                <p class="exp-position">Placeholder2</p>
-                <p class="exp-desc">
-                    AtividadesPlaceholder2
+                <div class="education-left">
+                    <p class="education-school-name">USP</p>
+                    <p class="education-time-period">2015-2018</p>
+            </div>
+            <div class="education-right">
+                <p class="education-subject">Engenharia da Computação</p>
+                <p class="education-desc">
+                    Graduação em Engenharia de Software
                 </p>
             </div>
-            <div class="exp-left">
-                <p class="exp-company-name">Empresa 03</p>
-                <p class="exp-time-period">2000-2020</p>
-            </div>
-        <div class="exp-right">
-            <p class="exp-position">Placeholder3</p>
-            <p class="exp-desc">
-                AtividadesPlaceholder3
-            </p>
-        </div>
-        <!-- Término da cópia para nova Experiência -->
                 </div>
             </section>
-            </section>
+        </section>
     </main>
 </body>
+
 </html>
