--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="icon" href="img/icon.jpeg" type="image/icon type">
+
 </head>
 
 <body>
