--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV John Doe</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" href="img/icon.jpeg" type="image/icon type">
@@ -51,15 +59,13 @@
         <section class="right-section">
             <div class="right-section-contents">
                 <section class="about gap">
-                    <div class="right-title">Sobre Mim
-                        <p class="about me contents">
+                    <div class="right-title">Sobre Mim</div>
+                        <p class="about-me-contents">
                             Olá, sou o John Doe.<br>
                             <br>Um pouco mais sobre o que faço
                             <br> Quais são minhas competências
                         </p>
-                    </div>
                 </section>
-            </div>
             <section class="experience gap">
                 <div class="right-title">Experiencia</div>
                 <div class="experience-contents">
@@ -144,6 +150,7 @@
                             </p>  
                         </div>
                 </div>
+            </div>
             </section>
         </section>
     </main>
