--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li>
-                            <p>Blender3d, Maya Software 3D</p>
-                        </li>
-                        <li>
-                            <p>Krita, Paint.net</p>
-                        </li>
+                        <li><p><i class="fa fa-object-ungroup"></i>Blender3d, Maya Software</p></li>
+                        <li><p><i class="fa fa-paint-brush"></i>Krita, Paint.net</p></li>
+                        <li><p><i class="fa fa-file-code-o"></i>Git & GitHub</p></li>
                     </ul>
                 </div>
             </div>
@@ -62,41 +59,46 @@
                     <div class="right-title">Sobre Mim</div>
                         <p class="about-me-contents">
                             Olá, sou o John Doe.<br>
-                            <br>Um pouco mais sobre o que faço
-                            <br> Quais são minhas competências
+                            <br>Perfil <i>Lorem ipsum</i> criado para a <b>Jornada Dev EBAC 2022!</b>
+                            <br> Imagem de perfil falso cortesia de <a href="https://this-person-does-not-exist.com/en"> This Person Does Not Exist</a>
                         </p>
                 </section>
+
             <section class="experience gap">
                 <div class="right-title">Experiencia</div>
                 <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 01</p>
-                        <p class="exp-time-period">2021-Present</p>
+                        <p class="exp-company-name">Pixar Animation Studios</p>
+                        <p class="exp-time-period">1986-Present</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-position">3D Rigging Assistant</p>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades
+                            Helped to 3D Rig a few assets.
                         </p>
                     </div>
+                </div>
+                <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 02</p>
-                        <p class="exp-time-period">2000-2020</p>
+                        <p class="exp-company-name">Lucasfilm Ltd.</p>
+                        <p class="exp-time-period">1975-1986</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Placeholder2</p>
+                        <p class="exp-position">3D Rigging Assistant</p>
                         <p class="exp-desc">
-                            AtividadesPlaceholder2
+                            Helped to 3D Rig a few assets.
                         </p>
                     </div>
+                </div>
+                <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 03</p>
-                        <p class="exp-time-period">2000-2020</p>
+                        <p class="exp-company-name">Lucasfilm Ltd.</p>
+                        <p class="exp-time-period">1971-1975</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Placeholder3</p>
+                        <p class="exp-position">Concept Artist Junior</p>
                         <p class="exp-desc">
-                            AtividadesPlaceholder3
+                            Helped the Concept Art department in various activities.
                         </p>
                     </div>
                 </div>
@@ -105,25 +107,27 @@
                 <div class="right-title">Formação Academica</div>
                 <div class="education-contents">
                     <div class="education-left">
-                        <p class="education-school-name">PUC</p>
-                        <p class="education-time-period">2021-2023</p>
-                </div>
-                <div class="education-right">
-                    <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-school-name">NYIT</p>
+                        <p class="education-time-period">1955-1960</p>
+                    </div>
+                    <div class="education-right">
+                    <p class="education-subject">Computer Science</p>
                     <p class="education-desc">
-                        Pós Graduação em Engenharia de Software
+                        Bachelors in Computer Science
                     </p>
+                    </div>
                 </div>
-                <div class="education-left">
-                    <p class="education-school-name">USP</p>
-                    <p class="education-time-period">2015-2018</p>
-            </div>
-            <div class="education-right">
-                <p class="education-subject">Engenharia da Computação</p>
-                <p class="education-desc">
-                    Graduação em Engenharia de Software
-                </p>
-            </div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">CGL</p>
+                        <p class="education-time-period">1970-1980</p>
+                    </div>
+                    <div class="education-right">
+                    <p class="education-subject">Computer Generated Imagery</p>
+                    <p class="education-desc">
+                    Masters in CGI
+                    </p>
+                    </div>
                 </div>
             </section>
             <section class="awards gap">
@@ -139,18 +143,19 @@
                             Curso feito na Ebac no ano de 2018
                         </p>  
                     </div>
+                </div>
+                <div class="awards-contents">
                     <div class="awards-left">
                         <p class="awards-company-name">Ebac</p>
                         <p class="awards-time-period">Junho de 2019</p>
-                        </div>
-                        <div class="awards-right">
-                            <p class="awards-name">Curso de Análise de Dados</p>
-                            <p class="awards-desc">
-                                Curso feito na Ebac no ano de 2019
-                            </p>  
-                        </div>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de Concept Artist</p>
+                        <p class="awards-desc">
+                            Curso feito na Ebac no ano de 2019
+                        </p>  
+                    </div>
                 </div>
-            </div>
             </section>
         </section>
     </main>
